fixed pricing alignment

--- a/Website/Style/style.sass
+++ b/Website/Style/style.sass
@@ -125,14 +125,15 @@ body
         .sections
             width: 80%
             display: flex
+            padding: 10px
             flex-direction: row
             justify-content: center
-            align-items: center
+            align-items: baseline
             .sensor
                 width: 30%
                 h2
                     color: #FFFF00
-                    font-size: 42px
+                    font-size: 38px
                     text-align: center
                 p
                     text-align: center
